--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@babel/preset-env": "^7.9.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "imagemin-pngquant": "^8.0.0"
   }
 }
